<?xml version="1.0"?>
<package format="2">
  <name>point_to_cell</name>
  <version>0.0.0</version>
  <description>converts clicked point (rviz) into a map cell</description>

  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>

  <license>WTFPL</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>

</package>
